fix:modal height on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,3 +18,8 @@ body {
   background-image: radial-gradient(ellipse at center top, rgba(255, 255, 255, 0.15) 0%, transparent 70%),
     radial-gradient(ellipse at center bottom, rgba(255, 255, 255, 0.15) 0%, transparent 70%);
 }
+
+.min-h-screen-responsive {
+  min-height: 100vh;
+  min-height: 100dvh;
+}
